# opalescence

./: .editorconfig  .gitignore  LICENSE  README.md  ROADMAP  TODO  config.py  default.py  main.py  opalescence.py  opalescense.py  opl.py  philosophy.md  pyproject.toml  setup.py
applib/: args.py  logging.py
btlib/: bencode.py  manager.py  peer.py  torrent.py  tracker.py
btlib/tests/: bencode_test.py  torrent_test.py
config/: logging.ini
opalescence/: __init__.py  __main__.py  args.py
opalescence/btlib/: __init__.py  bencode.py  client.py  download.py  events.py  metainfo.py  peer.py  task.py  torrent.py  tracker.py  tracker_connection.py  utils.py
opalescence/btlib/peer/: __init__.py  messages.py  peer.py  piece_handler.py
opalescence/btlib/protocol/: __init__.py  bencode.py  errors.py  file_writer.py  fileio.py  messages.py  metainfo.py  peer.py  peer_info.py  piece_handler.py  tracker.py
opalescence/ui/: __init__.py  cli.py  tui.py
tests/: __init__.py  context.py  test_basic_creation.py  test_bencode.py  test_bencoding.py  test_client.py  test_peer.py  test_torrent.py  test_tracker.py  utils.py
torrent_utils/: bencoding.py  torrent.py
torrentlib/: bencode.py  bencoding.py  comm.py  peer.py  torrent.py  tracker.py
utils/: decorators.py  exceptions.py
