[tool.poetry]
name = "opalescence"
version = "0.3.0"
description = ""
authors = ["brian houston morrow <bhm@brianmorrow.net>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
bitstring = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
