[tool.poetry]
name = "opalescence"
version = "0.5.5"
description = ""
authors = ["Brian Houston Morrow <bhm@brianmorrow.net>"]

[tool.poetry.dependencies]
python = "^3.9"
bitstring = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
